Alternate stylesheets (without title attribute) are loaded on refresh https://bugs.webkit.org/show_bug.cgi?id=24354

Patch by Dave Tharp <dtharp@codeaurora.org> on 2012-03-13
Reviewed by David Hyatt.

Source/WebCore:

Alternate stylesheets are now ignored in <link> tags if
they have no title attribute (per spec).

Tests: fast/css/link-alternate-stylesheet-1.html
       fast/css/link-alternate-stylesheet-2.html
       fast/css/link-alternate-stylesheet-3.html
       fast/css/link-alternate-stylesheet-4.html
       fast/css/link-alternate-stylesheet-5.html

* dom/Document.cpp:
(WebCore::Document::collectActiveStylesheets):

LayoutTests:

Addapted alternate stylesheet tests from http://robballou.com/switcher/sandbox/alternate1.php

* fast/css/link-alternate-stylesheet-1-expected.txt: Added.
* fast/css/link-alternate-stylesheet-1.html: Added.
* fast/css/link-alternate-stylesheet-2-expected.txt: Added.
* fast/css/link-alternate-stylesheet-2.html: Added.
* fast/css/link-alternate-stylesheet-3-expected.txt: Added.
* fast/css/link-alternate-stylesheet-3.html: Added.
* fast/css/link-alternate-stylesheet-4-expected.txt: Added.
* fast/css/link-alternate-stylesheet-4.html: Added.
* fast/css/link-alternate-stylesheet-5-expected.txt: Added.
* fast/css/link-alternate-stylesheet-5.html: Added.
* fast/css/resources/basic.css: Added.
(body):
(code):
(#source):
* fast/css/resources/high.css: Added.
(body):
(h1):
* fast/css/resources/normal.css: Added.
(body):
(h1):
* fast/css/resources/small.css: Added.
(body):

Canonical link: https://commits.webkit.org/98202@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110626 268f45cc-cd09-0410-ab3c-d52691b4dbfc